--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "so-vits-svc-fork"
-version = "4.2.26"
+name = "so-vits-svc-fork2"
+version = "4.2.27"
 description = "A fork of so-vits-svc."
 authors = ["34j <34j.95a2p@simplelogin.com>"]
 license = "MIT"
